src/objects/rh2__PS_Settings__c.object
<CustomObject>
    <customSettingsType>Hierarchy</customSettingsType>
    <description>Parameters used for the Rollup Helper application.</description>
    <fields>
        <fullName>rh2__Advanced_Currency__c</fullName>
        <defaultValue>false</defaultValue>
        <description>Used to determine if advanced currency management is enabled.</description>
        <inlineHelpText>If Advanced Currency Management is enabled in your organization select this check box.</inlineHelpText>
        <label>zDeprecated</label>
        <type>Checkbox</type>
    </fields>
    <fields>
        <fullName>rh2__Advanced_Currency_del__c</fullName>
        <defaultValue>false</defaultValue>
        <description>Used to determine if advanced currency management is enabled.</description>
        <inlineHelpText>If Advanced Currency Management is enabled in your organization select this check box.</inlineHelpText>
        <label>zDeprecated</label>
        <type>Checkbox</type>
    </fields>
    <fields>
        <fullName>rh2__Attempt_to_Update_Converted_Leads__c</fullName>
        <defaultValue>false</defaultValue>
        <description>Unchecked - Rollup Helper will ignore all converted leads 
Checked - Rollup Helper will attempt to update converted leads (may or may not succeed depending this org&apos;s configurations)
The converted leads are identified by the &quot;isConverted&quot; system field.
Required settings:
1. The &quot;Enable Set Audit Fields upon Record Creation and Update Records with Inactive Owners User Permissions&quot; option is checked, found under Setup -&gt; User Interface
2. Rollup Helper&apos;s record scope is set to 1 (or update single records with real time if applicable)</description>
        <inlineHelpText>When checked, Rollup Helper will attempt to update converted leads (the update may or may not succeed depending this org&apos;s configurations). This option is off by default.
The converted leads are identified by the &quot;isConverted&quot; system field.</inlineHelpText>
        <label>Attempt to Update Converted Leads</label>
        <type>Checkbox</type>
    </fields>
    <fields>
        <fullName>rh2__Batch_Agent_Id__c</fullName>
        <label>Batch Agent Id</label>
        <length>20</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>rh2__Data_Load_Batch_Size__c</fullName>
        <defaultValue>200</defaultValue>
        <inlineHelpText>The number of records per batch when a data load is performed in the environment.  Will not need to be adjusted unless the value is below 200.</inlineHelpText>
        <label>Data Load Batch Size</label>
        <precision>3</precision>
        <scale>0</scale>
        <type>Number</type>
    </fields>
    <fields>
        <fullName>rh2__Disable_Advanced_Currency__c</fullName>
        <defaultValue>false</defaultValue>
        <description>Used to determine if advanced currency management should be disabled.</description>
        <inlineHelpText>If Advanced Currency Management is disabled in your organization select this check box.</inlineHelpText>
        <label>Disable Advanced Currency</label>
        <type>Checkbox</type>
    </fields>
    <fields>
        <fullName>rh2__Enable_Single_Parent_Processing__c</fullName>
        <defaultValue>false</defaultValue>
        <description>When checked will prevent multiple children from attempting to update the same parent at the same time.</description>
        <inlineHelpText>This will help to prevent record locks caused by multiple rollups attempting to update the same object at the same time.</inlineHelpText>
        <label>Enable Single Parent Processing</label>
        <type>Checkbox</type>
    </fields>
    <fields>
        <fullName>rh2__Enable_Validation_Rule_Helper__c</fullName>
        <defaultValue>false</defaultValue>
        <description>When checked you can have Rollup Helper updates excluded from your select validation rules.</description>
        <inlineHelpText>To enable Rollup Helper updates to be excluded from a Validation Rule add &apos;&amp;&amp; $Setup.rh2__PS_Settings__c.rh2__Run_Validation_Rule__c&apos; at the end of the contents of the Error Condition Formula section of a validation rule.</inlineHelpText>
        <label>Enable Validation Rule Helper</label>
        <type>Checkbox</type>
    </fields>
    <fields>
        <fullName>rh2__Exception_Lifespan__c</fullName>
        <description>The number of days that exceptions should be saved for before being cleaned up by Rollup Helper</description>
        <label>Exception Lifespan</label>
        <precision>2</precision>
        <scale>0</scale>
        <type>Number</type>
    </fields>
    <fields>
        <fullName>rh2__Limit_Pre_Processing__c</fullName>
        <defaultValue>false</defaultValue>
        <inlineHelpText>Leave this unchecked if you only want rollups / records to be processed where a change was actually made to the source field.  Removes non-essential processing such as filtering out fields that don&apos;t need to be updated (Can help w/ Timeout issues).</inlineHelpText>
        <label>Limit Pre Processing</label>
        <type>Checkbox</type>
    </fields>
    <fields>
        <fullName>rh2__Limit_Processing_During_Data_Load__c</fullName>
        <defaultValue>false</defaultValue>
        <inlineHelpText>This field is deprecated.</inlineHelpText>
        <label>zDeprecated</label>
        <type>Checkbox</type>
    </fields>
    <fields>
        <fullName>rh2__MaxBatch__c</fullName>
        <inlineHelpText>Number of batch jobs that Rollup Helper can initiate concurrently.  We recommend that the total number of jobs available between Batch, Future, and Queueable is at least 30 concurrent jobs available to Rollup Helper.</inlineHelpText>
        <label>Max Concurrent Batch Processes</label>
        <precision>2</precision>
        <scale>0</scale>
        <type>Number</type>
    </fields>
    <fields>
        <fullName>rh2__MaxFuture__c</fullName>
        <inlineHelpText>Number of Future method calls that Rollup Helper can initiate concurrently.  We recommend that the total number of jobs available between Batch, Future, and Queueable is at least 30 concurrent jobs available to Rollup Helper.</inlineHelpText>
        <label>Max Concurrent Future Processes</label>
        <precision>2</precision>
        <scale>0</scale>
        <type>Number</type>
    </fields>
    <fields>
        <fullName>rh2__MaxQueueable__c</fullName>
        <inlineHelpText>Number of Queueable jobs that Rollup Helper can initiate concurrently.  We recommend that the total number of jobs available between Batch, Future, and Queueable is at least 30 concurrent jobs available to Rollup Helper.</inlineHelpText>
        <label>Maximum Jobs Added to the Queue</label>
        <precision>3</precision>
        <scale>0</scale>
        <type>Number</type>
    </fields>
    <fields>
        <fullName>rh2__Max_Batch__c</fullName>
        <inlineHelpText>Number of batches to initiate concurrently.</inlineHelpText>
        <label>zDeprecated</label>
        <precision>1</precision>
        <scale>0</scale>
        <type>Number</type>
    </fields>
    <fields>
        <fullName>rh2__Max_Future__c</fullName>
        <inlineHelpText>Number of Future method calls to initiate concurrently.</inlineHelpText>
        <label>zDeprecated</label>
        <precision>2</precision>
        <scale>0</scale>
        <type>Number</type>
    </fields>
    <fields>
        <fullName>rh2__Parent_Sync_Job_Id__c</fullName>
        <label>zDeprecated</label>
        <length>255</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>rh2__Premium_Key__c</fullName>
        <label>zDeprecated</label>
        <length>64</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>rh2__RecordScope__c</fullName>
        <inlineHelpText>Maximum number of records to process per asynchronous job with Rollup Helper.  This impacts the number of async calls needed in order to process your entire set of records to complete an asynchronous transaction.  Best to be a multiple of 5.</inlineHelpText>
        <label>Record Scope</label>
        <precision>5</precision>
        <scale>0</scale>
        <type>Number</type>
    </fields>
    <fields>
        <fullName>rh2__Record_Size__c</fullName>
        <inlineHelpText>Maximum number of records to process asynchronously with Rollup Helper.  This impacts the number of batch / future methods will be called in order to process your entire set of records to complete an asynchronous transaction.  Best to be a multiple of 5.</inlineHelpText>
        <label>zDeprecated</label>
        <precision>5</precision>
        <scale>0</scale>
        <type>Number</type>
    </fields>
    <fields>
        <fullName>rh2__Rollup_Inactive_Upon_Creation__c</fullName>
        <defaultValue>false</defaultValue>
        <inlineHelpText>If this setting is checked, new rollups will not be automatically activated upon creation.</inlineHelpText>
        <label>Rollup Inactive Upon Creation</label>
        <type>Checkbox</type>
    </fields>
    <fields>
        <fullName>rh2__Rollups_Per_Async__c</fullName>
        <inlineHelpText>This setting modifies the number of rollups processed per asynchronous job request.</inlineHelpText>
        <label>Rollups Per Asynchronous Request</label>
        <precision>2</precision>
        <scale>0</scale>
        <type>Number</type>
    </fields>
    <fields>
        <fullName>rh2__Run_Realtime_Rollup__c</fullName>
        <defaultValue>true</defaultValue>
        <description>If checked, the realtime disable script may be used to temporarily turn off rollups.  For more details, please contact support@passagetech.com.</description>
        <inlineHelpText>If checked, the realtime disable script may be used to temporarily turn off rollups.  For more details, please contact support@passagetech.com.</inlineHelpText>
        <label>Allow Disable Realtime By Script</label>
        <type>Checkbox</type>
    </fields>
    <fields>
        <fullName>rh2__Run_Validation_Rule__c</fullName>
        <defaultValue>true</defaultValue>
        <description>LEAVE THIS OPTION CHECKED. If unchecked then users will enter records with validation rules not in effect.  When this setting is added to a validation rule, Rollup Helper will turn off the validation rule upon update to a target record.</description>
        <inlineHelpText>LEAVE THIS OPTION CHECKED</inlineHelpText>
        <label>Run Validation Rule</label>
        <type>Checkbox</type>
    </fields>
    <fields>
        <fullName>rh2__Static_Asynchronous_Processing_Enabled__c</fullName>
        <defaultValue>false</defaultValue>
        <label>Static Asynchronous Processing Enabled?</label>
        <type>Checkbox</type>
    </fields>
    <fields>
        <fullName>rh2__Usage_of_Limits__c</fullName>
        <defaultValue>90</defaultValue>
        <inlineHelpText>Determines the percentage of governor limit usage at which Rollup Helper should switch to asynchronous processing.  It is generally not recommended to lower this value below 60%.</inlineHelpText>
        <label>Usage % of Limits</label>
        <precision>3</precision>
        <scale>0</scale>
        <type>Number</type>
    </fields>
    <fields>
        <fullName>rh2__UseDatedConversionRatesForNonOpps__c</fullName>
        <defaultValue>false</defaultValue>
        <description>This option is for orgs with MC &amp; ACM enabled. When unchecked (by default), rollups will use the static conversion rate for non-opportunity target objects; when checked, rollups will use the dated conversion rate for non-opp target objects, decided by the child record&apos;s date field (the date field can be selected under per rollup&apos;s advanced settings).</description>
        <inlineHelpText>When unchecked (by default), rollups will use the static rate for non-opp target objs; otherwise, use the dated currency rate, decided by each child record&apos;s date field (this date field can be selected under per rollup&apos;s advanced settings).</inlineHelpText>
        <label>Use Dated Conversion Rates For Non Opps</label>
        <type>Checkbox</type>
    </fields>
    <fields>
        <fullName>rh2__ValidateRollup__c</fullName>
        <defaultValue>true</defaultValue>
        <inlineHelpText>When checked, this setting causes Rollup Helper to automatically run rollup queries for validation purposes each time a rollup is created or edited.</inlineHelpText>
        <label>Validate Rollup Query</label>
        <type>Checkbox</type>
    </fields>
    <fields>
        <fullName>rh2__emailToSendExceptions__c</fullName>
        <inlineHelpText>Rollup Helper will send an email to the specified email address daily with a summary of exceptions that have occurred (no emails will be sent if this field is not populated).</inlineHelpText>
        <label>Email To Send Exceptions</label>
        <length>255</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>rh2__runAsModifyingUserOnly__c</fullName>
        <defaultValue>false</defaultValue>
        <description>This checkbox will cause Rollup Helper to only process queued asynchronous requests for the user that initiated the asynchronous request. If there is a queue record for a user that is not the Modified By user then the queue record will not be processed until a scheduled class runs the queue record or the user associated with the queue record adds an item to the Rollup Helper queue.</description>
        <inlineHelpText>This checkbox will cause Rollup Helper to only process queued asynchronous requests for the user that initiated the asynchronous request.</inlineHelpText>
        <label>Process Queue Items Based On Modified By</label>
        <type>Checkbox</type>
    </fields>
    <fields>
        <fullName>rh2__validationHelperDuringAsync__c</fullName>
        <defaultValue>false</defaultValue>
        <description>Enables Validation Helper will be active during asynchronous processing</description>
        <inlineHelpText>If this is checked, Enable Validation Helper will be active during asynchronous processing.  Disable if frequent row lock errors have been encountered by Rollup Helper asynchronous jobs.</inlineHelpText>
        <label>Allow Validation Helper During Async</label>
        <type>Checkbox</type>
    </fields>
    <label>Rollup Helper Settings</label>
</CustomObject>